fix letter spacing in mixin

--- a/sass/_mi_mixins.scss
+++ b/sass/_mi_mixins.scss
@@ -128,7 +128,7 @@
 
 @mixin uppercase {
   text-transform: uppercase;
-  letter-spacing: 1px;
+  letter-spacing: 3px;
 }
 
 @mixin hide_from_dom {
